2010-04-02  Marek Habersack  <mhabersack@novell.com>

	* configure.in: include -lkernel32 in LDFLAGS when cross-compiling
	with MINGW or compiling on Cygwin.

	* build-mingw32.sh: some changes to make the compilation work
	better on non-SuSE systems.

2010-04-01  Mark Probst  <mark.probst@gmail.com>

	* scripts/mono-heapviz: Process and output detailed pinning
	statistics.

2010-03-29  Andreas Färber  <andreas.faerber@web.de>

	* configure.in: Add support for Haiku

	Contributed under MIT/X11 license.

2010-03-26  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add a --enable-system-aot option to control the generation of
	AOT images during the build.

2010-03-26  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Apply some openbsd changes from openbsd ports.

2010-03-23  Neale Ferguson <neale@sinenomine.net>

	* configure.in: Change ACCESS_UNALINGED to "yes" for s390/s390x.

2010-03-22  Andreia Gaita  <avidigal@gmail.com>

	* configure.in: fix build when doing with-mcs-docs=no on a clean tree

2010-03-19  Zoltan Varga  <vargaz@gmail.com>

	* autogen.sh: Pass -Wno-portability to automake to quiet some warnings.

2010-03-16  Jb Evain  <jbevain@novell.com>

	* runtime/Makefile.am, build-mingw32.sh: rename
	the net_2_1 profile to moonlight.

2010-03-10  Andrew Jorgensen  <ajorgensen@novell.com>

	* configure.in: configure eglib even when we are not building
	it (fixes dist)

Fri Mar 5 18:58:15 CET 2010 Paolo Molaro <lupus@ximian.com>

	* configure.in: introduce the --enable-small-config option
	to reduce runtime requirements (and capabilities).

2010-03-04  Zoltan Varga  <vargaz@gmail.com>

	* Makefile.am (DIST_SUBDIRS): Add eglib.

	* autogen.sh: Run eglib's autogen.sh too.

2010-03-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am:
	* mono/Makefile.am: Only build some subdirs when configured for
	moonlight.

	* configure.in: If configured --with-moonlight=yes, define MOONLIGHT and
	use that variable instead of INSTALL_2_1.
